fix: Broken LinkExtractor test
Signed-off-by: TannerGabriel <gabrieltanner.code@gmail.com>